# tim_tdm

./: .gitignore  .gitmodules  README.md  plan.txt  pyproject.toml  refactor_plan.txt
.claude/: settings.json
configs/cameras/: demo_video_0001.json  demo_video_0135.json  demo_video_0296.json  demo_video_0297.json  demo_video_0313.json  test_junction.json
demo/: demo_tdm.py  demo_tim.py
guide/: TDM.md  TIM.md
patches/: pie_data.patch
scripts/: _common.sh  run_calibrate.sh  run_tdm.sh  run_tim.sh  run_tracking.sh  run_train_both.sh  run_train_dashcam.sh  run_train_intent.sh  run_train_traffic_light.sh  run_trajectory.sh  run_visualize.sh  set_up_data.sh
scripts/slurm/: run_train_both.sh  set_up_data.sh
src/embed_traffic/: __init__.py  paths.py
src/embed_traffic/calibration/: __init__.py  __main__.py  calibrate.py  depth.py  ground_plane.py  schema.py
src/embed_traffic/data/: integrate.py  loader.py  prepare_yolo.py  visualize.py
src/embed_traffic/eval/: yolo_zeroshot.py
src/embed_traffic/inference/: __init__.py  __main__.py  demo.py  schema.py  tim.py  topdown.py
src/embed_traffic/models/: intent_model.py  tdm.py  tim.py  tracking.py  trajectory.py
src/embed_traffic/tdm/: __init__.py  demo.py  schema.py  simulator.py  tdm.py
src/embed_traffic/train/: config.py  dashcam.py  intent.py  traffic_light.py
src/embed_traffic/utils/: env.py
