[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embed_traffic"
version = "0.1.0"
description = "Embedded traffic perception system: TIM (pedestrian detection/tracking/intent) and TDM (driving decisions) for traffic light camera + driver app."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "embed_traffic contributors" }]

dependencies = [
    # Core DL — expect CUDA 12.8 wheels via --extra-index-url https://download.pytorch.org/whl/cu128
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.11.0",

    # YOLO + tracking
    "ultralytics>=8.4.36",
    "lapx>=0.5.2",

    # Vision
    "opencv-python>=4.10.0",
    "Pillow>=10.0.0",
    "imageio>=2.34.0",
    "imageio-ffmpeg>=0.5.0",

    # Numerics
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",

    # Tracking / filters
    "cython>=3.0.0",
    "filterpy>=1.4.5",
    "pykalman>=0.9.7",

    # Monocular depth (one-shot camera calibration at install time)
    "transformers>=4.40",
    "huggingface_hub>=0.23",

    # Comms (for TIM-TDM)
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.28.0",

    # Utilities
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "typing_extensions>=4.12.0",

    # Dataset download
    "kaggle>=2.0.0",

    # NVIDIA CUDA 12.8 libs (pulled in automatically by torch, listed for clarity)
    "nvidia-cudnn-cu12",
    "nvidia-cusparselt-cu12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "black>=24", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"embed_traffic" = ["py.typed"]
